# ProSurf

./: .gitignore  README.md  pyproject.toml
configs/: control_set.yaml
data/: all_9160_failed.txt  all_9160_scores.csv  cross_species_report.md  human_meltome_tms.csv  meltome_s1.xlsx  multispecies_scores.csv  ogt_research_report.md  pilot_200_scores.csv  pilot_50_scores.csv  prosurf_1000_report.md  random_1000_scores.csv  species_meltome_tms.csv  validation_report.md
docs/superpowers/plans/: 2026-06-20-zwitterionic-surface-phase1.md  2026-06-21-cross-species-ogt.md
prosurf/: config.py  pipeline.py
prosurf/io/: fetch.py  meltome.py  parse.py
prosurf/metric/: __init__.py  components.py  composition.py  engine_a.py  engine_b.py  mixing_spatial.py
prosurf/patches/: __init__.py  aggregate.py  cluster.py
prosurf/surface/: charges.py  pointcloud.py  sasa.py
prosurf/validate/: controls.py  crossspecies.py  robustness.py  synthetic.py
prosurf/viz/: patchmap.py
report/: ogt_research_report.md
scripts/: analyze_ogt.py  build_species_table.py  generate_slide_deck.py  run_all_9160.py  run_multispecies.py  run_validation.py  write_research_report.py
tests/: test_aggregate.py  test_charges.py  test_cluster.py  test_components.py  test_composition.py  test_config.py  test_control_set.py  test_crossspecies.py  test_engine_a.py  test_engine_agreement.py  test_engine_b.py  test_io.py  test_meltome.py  test_mixing_spatial.py  test_pipeline.py  test_pointcloud.py  test_robustness.py  test_sasa.py  test_validation.py  test_viz.py
(+2 files in other folders)
